# test_cuda

./: CMakeLists.txt  arrayfireops.cu  arrayfireops.h  filter_arrayfire.cu  main.cu
predicate/: predicate.cu  predicate.h
type_conversion/: host_to_device.cu  host_to_device.h
